--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TemplateApp</string>
+    <string name="ok">Ok</string>
+    <string name="action_cancel">Cancel</string>
 </resources>
